--- a/index.html
+++ b/index.html
@@ -40,27 +40,27 @@
 	.box_wrapper {
 		position: relative;
 		width: 100%;
-	  height: 150px;
-	  box-shadow: 2px 2px 25px rgba(152, 152, 152, 0.55);
-	  border-radius: 5px;
+	    height: 150px;
+	    box-shadow: 2px 2px 25px rgba(152, 152, 152, 0.55);
+	    border-radius: 5px;
 	}
 	.box_wrapper:after {
 		content: '';
-	  display: block;
-	  width: 100%;
-	  height: 100%;
-	  position: absolute;
-	  top: 0;
-	  right: 0;
-	  bottom: 0;
-	  left: 0;
-	  border-radius: 5px;
-	  background: url(boxBk.png);
-	  background-position: center center;
-		background-repeat: no-repeat;
+		display: block;
+		width: 100%;
+		height: 100%;
+		position: absolute;
+		top: 0;
+		right: 0;
+		bottom: 0;
+		left: 0;
+		border-radius: 5px;
+		background: url(boxBk.png);
+		background-position: center center;
+	    background-repeat: no-repeat;
 		background-size: cover;
-	  opacity: 0.9;
-	  z-index: -1;
+		opacity: 0.9;
+		z-index: -1;
 	}
 	.mt40 {
 		margin-top: 40px;
@@ -160,7 +160,7 @@
         </a>
         </div>
       </div>
-      <!-- Example row of columns -->
+      <!-- Example row of column -->
       <div class="row mt40">
         <div class="col-md-4">
         <a class="hrf" href="">
@@ -179,7 +179,7 @@
       <hr>
 <!-- footer -->   
       <footer>
-        <p style="color:#fff;">© 2016 Company, Inc.</p>
+        <p style="color:#fff;">© 2016 Company, Inc..</p>
       </footer>
     </div>
 </body>
