--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     </div>
   </nav>
 <!-- container -->   
-  <div class="container">
+  <div class="container" style="padding: 0 65px;position: absolute;top: 50%;left: 50%;transform: translate(-50%, -50%);transform: (50%, 50%);">
       <!-- Example row of columns -->
       <div class="row mt40">
         <div class="col-md-4">
@@ -162,6 +162,32 @@
       </div>
       <!-- Example row of column -->
       <div class="row mt40">
+        <div class="col-md-4">
+        <a class="hrf" href="">
+          <div class="box_wrapper">
+          	<div class="box_container">
+          		<span class="cricle cricle_col_4">
+          		  <img class="icon" width="40" src="ZH.png">
+          		</span>
+          		<span class="text">综合查询系统</span>
+          	</div>
+          </div>
+        </a>
+        </div>
+
+        <div class="col-md-4">
+        <a class="hrf" href="">
+          <div class="box_wrapper">
+          	<div class="box_container">
+          		<span class="cricle cricle_col_4">
+          		  <img class="icon" width="40" src="ZH.png">
+          		</span>
+          		<span class="text">综合查询系统</span>
+          	</div>
+          </div>
+        </a>
+        </div>
+
         <div class="col-md-4">
         <a class="hrf" href="">
           <div class="box_wrapper">
