--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
 		background-size: cover;
 		background-color: #464646;
     }
+    .container_mid {
+    	padding: 0 65px;
+    	position: absolute;
+    	top: 50%;
+    	left: 50%;
+    	transform: translate(-50%, -50%);
+    }
 	.img_logo {
 		margin-top: -8px;
 	}
@@ -120,7 +127,7 @@
     </div>
   </nav>
 <!-- container -->   
-  <div class="container" style="padding: 0 65px;position: absolute;top: 50%;left: 50%;transform: translate(-50%, -50%);transform: (50%, 50%);">
+  <div class="container container_mid">
       <!-- Example row of columns -->
       <div class="row mt40">
         <div class="col-md-4">
